@@ -1,0 +1,23 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/miscellaneous.R
+\name{getSplitVectorByInt}
+\alias{getSplitVectorByInt}
+\title{Split/combine a vector of size(s) to have a fixed combined size}
+\usage{
+getSplitVectorByInt(sizes, max)
+}
+\arguments{
+\item{sizes}{vector with size}
+
+\item{max}{integer with maximum combined size in output}
+}
+\value{
+vector of same length as \code{sizeVect},
+containing corresponding class
+}
+\description{
+Split/combine a vector of size(s) to have a fixed combined size
+}
+\author{
+Laure Cougnaud
+}
