@@ -3,6 +3,8 @@
     o use egg package to combine plots across modules
     o automatic split within module: subjectProfileReportFormat, getPageVar functions and formatReport parameter
     o getNLinesYGgplot: fix for interval plot
+    o combineVerticallyGGplot: close plotting window in case the egg package is used
+    o subjectProfileCombineOnce: fix automatic split of figures into multiple pages (new function: getSplitVectorByInt)
 0.0.6
     o subjectProfileLinePlot: include colorPalette
     o subjectProfileIntervalPlot: don't delete records without start date, different arrows for missing start/end dates
